<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Admin PMR</string>
    <string name="app_version">V2.6</string>

    <string name="password_hint">Пароль</string>
    <string name="password_btn">ВОЙТИ</string>
    <string name="password_error">Неверный пароль</string>

    <string name="btn_settings">НАСТРОЙКИ</string>

    <string name="list_title">СПИСОК АБОНЕНТОВ</string>

    <string name="ban_on">БАН</string>
    <string name="ban_off">БАН</string>

    <string name="settings_title">НАСТРОЙКИ</string>
    <string name="settings_current_pass">Текущий пароль</string>
    <string name="settings_new_pass">Новый пароль</string>
    <string name="settings_confirm_pass">Подтверждение нового пароля</string>
    <string name="settings_save">СОХРАНИТЬ</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="settings_error_current">Неверный текущий пароль</string>
    <string name="settings_error_empty">Пароль не может быть пустым</string>
    <string name="settings_error_mismatch">Подтверждение не совпадает</string>

    <string name="settings_refresh_title">Частота обновления списка (секунды)</string>
    <string name="settings_refresh_hint">2</string>

    <string name="settings_password_title">Требовать пароль при запуске</string>

    <string name="settings_port_title">Порт приёма UDP</string>
    <string name="settings_port_hint">5323</string>

    <string name="settings_check_title">Показывать проверку системы при запуске</string>

    <string name="settings_26_title">Подключение 26 Региона к Ростовскому репитеру</string>

    <string name="btn_26_on">ВКЛЮЧЕНО</string>
    <string name="btn_26_off">ВЫКЛЮЧЕНО</string>

    <string name="settings_log_title">Логи приложения (диагностика)</string>
    <string name="settings_log_open">ОТКРЫТЬ ЛОГИ</string>

    <string name="log_title">ЛОГИ ПРИЛОЖЕНИЯ</string>
    <string name="log_clear">ОЧИСТИТЬ</string>
    <string name="log_save">СОХРАНИТЬ В ФАЙЛ</string>
    <string name="log_share">ПОДЕЛИТЬСЯ</string>
    <string name="log_mail">ОТПРАВИТЬ НА rw6hhl@mail.ru</string>
    <string name="log_saved">Лог сохранён</string>
    <string name="log_save_error">Ошибка сохранения</string>
    <string name="log_empty">Лог пуст</string>

    <string name="notif_channel">PMR Admin</string>
    <string name="notif_title">PMR Admin работает</string>
    <string name="notif_text">Соединение с сервером PMR активно</string>

    <string name="toast_ban_sent">Бан отправлен b%1$d</string>
    <string name="toast_ban_null">Служба не готова</string>
    <string name="toast_ban_not_running">Сокет не открыт</string>
    <string name="toast_26_off">260 отправлено (выключить)</string>
    <string name="toast_26_on">261 отправлено (включить)</string>
    <string name="toast_26_null">Служба не готова</string>

    <string name="check_title">ПРОВЕРКА СИСТЕМЫ</string>
    <string name="check_port">Порт приёма</string>
    <string name="check_server">Сервер PMR</string>
    <string name="check_channel">Канал</string>
    <string name="check_secret">Секрет</string>
    <string name="check_password">Пароль</string>
    <string name="check_autostart">Автозапуск</string>
    <string name="check_continue">ПРОДОЛЖИТЬ</string>
    <string name="check_free">СВОБОДЕН</string>
    <string name="check_busy">ЗАНЯТ</string>
    <string name="check_available">ДОСТУПЕН</string>
    <string name="check_unavailable">НЕДОСТУПЕН</string>
    <string name="check_on">ВКЛЮЧЁН</string>
    <string name="check_off">ОТКЛЮЧЁН</string>
</resources>