<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/c_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/c_blue"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:fontFamily="monospace" />

    <Button
        android:id="@+id/passBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password_btn"
        android:backgroundTint="@color/c_green"
        android:textColor="@color/c_white" />

</LinearLayout>